# deskovky_watchdog

./: .gitignore  Dockerfile  README.md  app.py  common.py  compare.py  db_view.py  dbview.py  pyproject.toml  report.py  requirements.txt  schedule.py  scrape_data.db  tasks.py
